--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <ul>
           <li>
             <img
-              src="./image/analitics/Rectangle 71.png"
+              src="./image/analitics/Rectangle71.png"
               alt="analitics"
               width="360px"
               height="300px"
@@ -77,7 +77,7 @@
           </li>
           <li>
             <img
-              src="./image/analitics/img 2.png "
+              src="./image/analitics/img2.png "
               alt="messenger"
               width="360px"
               height="300px"
@@ -85,7 +85,7 @@
           </li>
           <li>
             <img
-              src="./image/analitics/img 3.png "
+              src="./image/analitics/img3.png "
               alt="look at the photo"
               width="360px"
               height="300px"
@@ -101,8 +101,8 @@
             <img
               src="./image/team/img.png"
               alt="mark Guerrero"
-              width="264"
-              height="260"
+              width="264px"
+              height="260px"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
@@ -111,8 +111,8 @@
             <img
               src="./image/team/img2.png"
               alt="Tom Ford"
-              width="264"
-              height="260"
+              width="264px"
+              height="260px"
             />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
@@ -121,8 +121,8 @@
             <img
               src="./image/team/img3.png"
               alt="Camila Garcia"
-              width="264"
-              height="260"
+              width="264px"
+              height="260px"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
@@ -131,8 +131,8 @@
             <img
               src="./image/team/img4.png"
               alt="Daniel Wilson"
-              width="264"
-              height="260"
+              width="264px"
+              height="260px"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
