--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
   <body>
     <header>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li>
-            <a href="">WebStudio</a>
-          </li>
           <li>
             <a href="">studio</a>
           </li>
@@ -24,44 +22,55 @@
           </li>
         </ul>
       </nav>
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-        </li>
-      </ul>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button class="button">Order Service</button>
+        <button type="button">Order Service</button>
       </section>
       <!-- description -->
       <section>
-        <dl>
-          <dt>Strategy</dt>
-          <dd>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </dd>
-          <dt>Punctuality</dt>
-          <dd>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </dd>
-          <dt>Diligence</dt>
-          <dd>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </dd>
-          <dt>Technologies</dt>
-          <dd>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </dd>
-        </dl>
+        <h2></h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
       <!-- What are we doing -->
       <section>
@@ -69,7 +78,7 @@
         <ul>
           <li>
             <img
-              src="./image/analitics/Rectangle71.png"
+              src="./image/analitics/Rectangle71.jpg"
               alt="analitics"
               width="360"
               height="300"
@@ -77,7 +86,7 @@
           </li>
           <li>
             <img
-              src="./image/analitics/img2.png "
+              src="./image/analitics/img2.jpg"
               alt="messenger"
               width="360"
               height="300"
@@ -85,9 +94,10 @@
           </li>
           <li>
             <img
-              src="./image/analitics/img3.png "
+              src="./image/analitics/img3.jpg "
               alt="look at the photo"
               width="360"
+              jpg
               height="300"
             />
           </li>
@@ -99,7 +109,7 @@
         <ul>
           <li>
             <img
-              src="./image/team/img.png"
+              src="./image/team/img.jpg"
               alt="mark Guerrero"
               width="264"
               height="260"
@@ -109,7 +119,7 @@
           </li>
           <li>
             <img
-              src="./image/team/img2.png"
+              src="./image/team/img2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -119,7 +129,7 @@
           </li>
           <li>
             <img
-              src="./image/team/img3.png"
+              src="./image/team/img3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -129,7 +139,7 @@
           </li>
           <li>
             <img
-              src="./image/team/img4.png"
+              src="./image/team/img4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
@@ -141,7 +151,7 @@
       </section>
     </main>
     <footer>
-      <a href="">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
