--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="./index.html">WebStudio</a>
         <ul>
           <li>
-            <a href="">studio</a>
+            <a href="">Studio</a>
           </li>
           <li>
             <a href="">Portfolio</a>
@@ -78,7 +78,7 @@
         <ul>
           <li>
             <img
-              src="./image/analitics/Rectangle71.jpg"
+              src="./images/Rectangle71.jpg"
               alt="analitics"
               width="360"
               height="300"
@@ -86,7 +86,7 @@
           </li>
           <li>
             <img
-              src="./image/analitics/img2.jpg"
+              src="./images/img2.jpg"
               alt="messenger"
               width="360"
               height="300"
@@ -94,7 +94,7 @@
           </li>
           <li>
             <img
-              src="./image/analitics/img3.jpg "
+              src="./images/img3.jpg "
               alt="look at the photo"
               width="360"
               jpg
@@ -106,10 +106,10 @@
       <!-- our team -->
       <section>
         <h2>Our Team</h2>
-        <ul>
+      
           <li>
             <img
-              src="./image/team/img.jpg"
+              src="./images/img.jpg"
               alt="mark Guerrero"
               width="264"
               height="260"
@@ -119,7 +119,7 @@
           </li>
           <li>
             <img
-              src="./image/team/img2.jpg"
+              src="./images/img02.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -129,17 +129,17 @@
           </li>
           <li>
             <img
-              src="./image/team/img3.jpg"
+              src="./images/img03.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
+            <>Camila G
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="./image/team/img4.jpg"
+              src="./images/img4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
