--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
               src="./images/img3.jpg "
               alt="look at the photo"
               width="360"
-              jpg
               height="300"
             />
           </li>
@@ -134,7 +133,7 @@
               width="264"
               height="260"
             />
-            <>Camila G
+            <h3>Camila G</h3>
             <p>Marketing</p>
           </li>
           <li>
