--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <ul>
           <li>
             <img
-              src="./images/Rectangle71.jpg"
+              src="./images/analitics/Rectangle71.jpg"
               alt="analitics"
               width="360"
               height="300"
@@ -86,7 +86,7 @@
           </li>
           <li>
             <img
-              src="./images/img2.jpg"
+              src="./images/analitics/img2.jpg"
               alt="messenger"
               width="360"
               height="300"
@@ -94,7 +94,7 @@
           </li>
           <li>
             <img
-              src="./images/img3.jpg "
+              src="./images/analitics/img3.jpg"
               alt="look at the photo"
               width="360"
               height="300"
@@ -108,8 +108,8 @@
         <ul>
           <li>
             <img
-              src="./images/img.jpg"
-              alt="mark Guerrero"
+              src="./images/team/mark-guerrero.jpg"
+              alt="mark-guerrero"
               width="264"
               height="260"
             />
@@ -118,8 +118,8 @@
           </li>
           <li>
             <img
-              src="./images/img02.jpg"
-              alt="Tom Ford"
+              src="./images/team/tom-ford.jpg"
+              alt="tom ford"
               width="264"
               height="260"
             />
@@ -128,18 +128,18 @@
           </li>
           <li>
             <img
-              src="./images/img03.jpg"
-              alt="Camila Garcia"
+              src="./images/team/camila-garcia.jpg"
+              alt="camila garcia"
               width="264"
               height="260"
             />
-            <h3>Camila G</h3>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="./images/img4.jpg"
-              alt="Daniel Wilson"
+              src="./images/team/danial-wilson.jpg"
+              alt="danial wilson"
               width="264"
               height="260"
             />
